--- a/example/networkconfig.yaml
+++ b/example/networkconfig.yaml
@@ -11,13 +11,13 @@ spec:
     # Specify driver image here
     # DO NOT include the image tag as AMD Network Operator will automatically manage the image tag for you
     # e.g. docker.io/username/amdainic_kmods
-    image: docker.io/amdpsdo/amdainic_kmods
+    image: docker.io/rocm/amdainic_kmods
     # Specify the credential for your private registry if it requires credential to get pull/push access
     # you can create the docker-registry type secret by running command like:
     # kubectl create secret docker-registry mysecret -n KMM-NameSpace -docker-server=registry.example.com --docker-username=xxx --docker-password=xxx
     # Make sure you created the secret within the namespace that KMM operator is running
     imageRegistrySecret:
-      name: amdpsdo-secret
+      name: my-secret
     # Specify the driver version
     # when you need to upgrade the driver, just update this field
     # we will unload the old version driver and load the new version driver
@@ -28,13 +28,12 @@ spec:
     enableNodeLabeller: True
 
     # node labeller image
-    # default value is amdpsdo/k8s-network-node-labeller:0.0.1
-    nodeLabellerImage: docker.io/amdpsdo/k8s-network-node-labeller:0.0.1
+    # default value is rocm/k8s-network-node-labeller:v1.0.0
+    nodeLabellerImage: docker.io/rocm/k8s-network-node-labeller:v1.0.0
 
     # Specify the device plugin image
-    # default value is rocm/k8s-device-plugin:latest
-    #devicePluginImage: rocm/k8s-device-plugin:latest
-    devicePluginImage: docker.io/amdpsdo/k8s-network-device-plugin:v1.0.0-beta.0
+    # default value is rocm/k8s-network-device-plugin:v1.0.0
+    devicePluginImage: docker.io/rocm/k8s-network-device-plugin:v1.0.0
 
     # Specify Device Plugin image pull policy
     # default value is IfNotPresent for valid tags, Always for no tag or "latest" tag
@@ -47,7 +46,7 @@ spec:
     # image registry secret used to pull/push images
     # ensure it's created in the same namespace as network operator is running
     imageRegistrySecret:
-      name: amdpsdo-secret
+      name: my-secret
         
   # Specify the metrics exporter config
   metricsExporter:
@@ -64,7 +63,8 @@ spec:
     nodePort: 32500
 
     # exporter image
-    image: docker.io/amdpsdo/device-metrics-exporter:exporter-0.0.1-139
+    # default value is docker.io/rocm/device-metrics-exporter:nic-v1.0.0
+    image: docker.io/rocm/device-metrics-exporter:nic-v1.0.0
 
     # image pull policy for metrics exporter
     # default value is IfNotPresent for valid tags, Always for no tag or "latest" tag
@@ -72,7 +72,7 @@ spec:
 
     # image registry secret used to pull/push images
     imageRegistrySecret:
-      name: amdpsdo-secret
+      name: my-secret
 
     # metrics config in configmap
     ###config:
@@ -87,11 +87,22 @@ spec:
     # CNI plugin configuration
     cniPlugins:
       enable: True
-      image: docker.io/amdpsdo/cni-plugins:v1.0.0-beta.0
+      image: docker.io/rocm/k8s-cni-plugins:v1.0.0
       imagePullPolicy: "Always"
       # image registry secret used to pull/push images
       imageRegistrySecret:
-        name: amdpsdo-secret
+        name: my-secret
+
+  commonConfig:
+    # -- init container image
+    initContainerImage: busybox:1.36
+    utilsContainer:
+      # -- network operator utility container image used for driver upgrade
+      image: docker.io/rocm/network-operator-utils:v1.0.0
+      # -- utility container image pull policy
+      imagePullPolicy: IfNotPresent
+      # -- utility container image pull secret, e.g. {"name": "mySecretName"}
+      imageRegistrySecret: {}
   
   # Specifythe node to be managed by this NetworkConfig Custom Resource
   selector:
