--- a/helm-charts-k8s/crds/networkconfig-crd.yaml
+++ b/helm-charts-k8s/crds/networkconfig-crd.yaml
@@ -359,15 +359,16 @@ spec:
                     type: string
                   blacklist:
                     description: |-
-                      blacklist amdnetwork drivers on the host. Node reboot is required to apply the baclklist on the worker nodes.
-                      Not working for OpenShift cluster. OpenShift users please use the Machine Config Operator (MCO) resource to configure amdnetwork blacklist.
+                      blacklist amdnetwork drivers on the host. Node reboot is required to apply the blacklist on the worker nodes.
+                      Require spec.devicePlugin.enableNodeLabeller=true to take effect.
+                      Not working for OpenShift cluster. OpenShift users please use the Machine Config Operator (MCO) resource to configure ionic blacklist.
                       Example MCO resource is available at https://instinct.docs.amd.com/projects/network-operator/en/latest/installation/openshift-olm.html#create-blacklist-for-installing-out-of-tree-kernel-module
                     type: boolean
                   enable:
                     default: true
                     description: |-
                       enable driver install. default value is true.
-                      disable is for skipping driver install/uninstall for dryrun or using in-tree amdnetwork kernel module
+                      disable is for skipping driver install/uninstall for dryrun or using in-tree ionic and rdma related kernel modules
                     type: boolean
                   image:
                     description: |-
@@ -444,6 +445,45 @@ spec:
                         type: object
                         x-kubernetes-map-type: atomic
                     type: object
+                  tolerations:
+                    description: tolerations for kmm module object
+                    items:
+                      description: |-
+                        The pod this Toleration is attached to tolerates any taint that matches
+                        the triple <key,value,effect> using the matching operator <operator>.
+                      properties:
+                        effect:
+                          description: |-
+                            Effect indicates the taint effect to match. Empty means match all taint effects.
+                            When specified, allowed values are NoSchedule, PreferNoSchedule and NoExecute.
+                          type: string
+                        key:
+                          description: |-
+                            Key is the taint key that the toleration applies to. Empty means match all taint keys.
+                            If the key is empty, operator must be Exists; this combination means to match all values and all keys.
+                          type: string
+                        operator:
+                          description: |-
+                            Operator represents a key's relationship to the value.
+                            Valid operators are Exists and Equal. Defaults to Equal.
+                            Exists is equivalent to wildcard for value, so that a pod can
+                            tolerate all taints of a particular category.
+                          type: string
+                        tolerationSeconds:
+                          description: |-
+                            TolerationSeconds represents the period of time the toleration (which must be
+                            of effect NoExecute, otherwise this field is ignored) tolerates the taint. By default,
+                            it is not set, which means tolerate the taint forever (do not evict). Zero and
+                            negative values will be treated as 0 (evict immediately) by the system.
+                          format: int64
+                          type: integer
+                        value:
+                          description: |-
+                            Value is the taint value the toleration matches to.
+                            If the operator is Exists, the value should be empty, otherwise just a regular string.
+                          type: string
+                      type: object
+                    type: array
                   upgradePolicy:
                     description: policy to upgrade the drivers
                     properties:
@@ -475,6 +515,12 @@ spec:
                             default: false
                             description: Force indicates if force draining is allowed
                             type: boolean
+                          gracePeriodSeconds:
+                            default: -1
+                            description: GracePeriodSeconds indicates the time kubernetes
+                              waits for a pod to shut down gracefully after receiving
+                              a termination signal
+                            type: integer
                           timeoutSeconds:
                             default: 300
                             description: TimeoutSecond specifies the length of time
@@ -492,6 +538,12 @@ spec:
                             default: false
                             description: Force indicates if force deletion is allowed
                             type: boolean
+                          gracePeriodSeconds:
+                            default: -1
+                            description: GracePeriodSeconds indicates the time kubernetes
+                              waits for a pod to shut down gracefully after receiving
+                              a termination signal
+                            type: integer
                           timeoutSeconds:
                             default: 300
                             description: TimeoutSecond specifies the length of time
