--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -15,6 +15,8 @@ subtrees:
     entries:
       - file: installation/kubernetes-helm
         title: Kubernetes (Helm)
+      - file: installation/kubernetes-helm-operators
+        title: Install GPU and Network Operators
       - file: installation/networkconfig
         title: Custom Resource Guide
       - file: installation/networkconfig-full.md
