--- a/docs/_static/cluster-validation-job.yaml
+++ b/docs/_static/cluster-validation-job.yaml
@@ -2,72 +2,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cluster-validation-test-runner-job-config
-data:
-  cluster-validation-test-runner-job-config.yaml: |
-    apiVersion: batch/v1
-    kind: Job
-    metadata:
-      name: cluster-validation-test-runner-job
-      labels:
-        amd.com/cluster-validation-created: "true"
-    spec:
-      template:
-        spec:
-          serviceAccountName: cluster-validation-sa
-          nodeSelector:
-            kubernetes.io/hostname: $$NODE
-          volumes:
-          - name: config-volume # Config map volume
-            configMap:
-              name: cluster-validation-config
-          - hostPath: # Specify to use this directory on the host as volume
-              path: /var/log/amd-test-runner
-              type: DirectoryOrCreate
-            name: test-runner-volume
-          containers:
-          - resources:
-              requests:
-                amd.com/gpu: $$GPU_PER_WORKER
-              limits:
-                amd.com/gpu: $$GPU_PER_WORKER
-            name: amd-test-runner
-            image: $$TEST_RUNNER_IMAGE
-            imagePullPolicy: IfNotPresent
-            securityContext: # setup security context for container to get access to device related interfaces
-              privileged: true
-            volumeMounts:
-            - mountPath: /var/log/amd-test-runner # Specify to mount host path volume into specific directory
-              name: test-runner-volume
-            - mountPath: /etc/test-runner/config.json
-              name: config-volume
-              subPath: GPU_VALIDATION_TESTS_JSON
-            env:
-            - name: TEST_TRIGGER
-              value: "MANUAL" # Set the TEST_TRIGGER environment variable to MANUAL for manual test
-            - name: POD_NAME # Use downward API to pass pod name to test runner container
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: POD_NAMESPACE # Use downward API to pass pod namespace to test runner container
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: POD_UID # Use downward API to pass pod UID to test runner container
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.uid
-            - name: NODE_NAME # Use downward API to pass host name to test runner container
-              valueFrom:
-                fieldRef:
-                  fieldPath: spec.nodeName
-          restartPolicy: Never
-      backoffLimit: 0
-      ttlSecondsAfterFinished: 300 # TTL for the job to be auto cleaned up after finishing
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
   name: cluster-validation-mpijob-config
 data:
   cluster-validation-mpijob-config.yaml: |
@@ -88,7 +22,10 @@ data:
           replicas: $$LAUNCHER_REPLICAS  # Value substituted at runtime from LAUNCHER_REPLICAS
           template:
             spec:
-              serviceAccountName: cluster-validation-sa  # Must have permission to create MPIJobs
+              # Only schedule on nodes labeled as candidate
+              nodeSelector:
+                amd.com/cluster-validation-candidate: "true"        # Must match CANDIDATE_LABEL
+              serviceAccountName: cluster-validation-sa             # Must have permission to create MPIJobs
               restartPolicy: Never
               volumes:
                 - name: shared
@@ -114,7 +51,7 @@ data:
               containers:
               - name: rccl-launcher
                 image: $$RCCL_WORKLOAD_IMAGE
-                imagePullPolicy: IfNotPresent
+                imagePullPolicy: Always
                 envFrom:
                   - configMapRef:
                       name: cluster-validation-config
@@ -194,8 +131,8 @@ data:
           replicas: $$WORKER_REPLICAS   # Dynamically set based on number of passed nodes
           template:
             metadata:
-              annotations:              # <-update before deploy, set NADs based on number of resources requested
-                k8s.v1.cni.cncf.io/networks: vf-amd-host-device-nad, vf-amd-host-device-nad
+              annotations:
+                k8s.v1.cni.cncf.io/networks: $$NAD_ANNOTATION
               labels: 
                 app: rccl-test-worker
             spec:
@@ -205,18 +142,104 @@ data:
               restartPolicy: Never
               containers:
               - name: rccl-test-worker
-                image: docker.io/rocm/roce-workload:ubuntu24_rocm7_rccl-J13A-1_anp-v1.1.0-4D_ainic-1.117.1-a-63   # <-update before deploy
-                imagePullPolicy: IfNotPresent
+                image: $$RCCL_WORKLOAD_IMAGE
+                imagePullPolicy: Always
+                securityContext:
+                  capabilities:
+                    add: ["IPC_LOCK"]
                 envFrom:
                   - configMapRef:
                       name: cluster-validation-config
                 resources:
                   requests:
                     amd.com/gpu: $$GPU_PER_WORKER
-                    amd.com/vnic: $$NIC_PER_WORKER
+                    amd.com/nic: $$PF_NIC_PER_WORKER
+                    amd.com/vnic: $$VF_NIC_PER_WORKER
                   limits:
                     amd.com/gpu: $$GPU_PER_WORKER
-                    amd.com/vnic: $$NIC_PER_WORKER
+                    amd.com/nic: $$PF_NIC_PER_WORKER
+                    amd.com/vnic: $$VF_NIC_PER_WORKER
+                volumeMounts:
+                  - name: boot
+                    mountPath: /boot
+                    readOnly: true
+                  - name: shm
+                    mountPath: /dev/shm
+              volumes:
+                - name: boot
+                  hostPath:
+                    path: /boot
+                    type: Directory
+                - name: shm
+                  emptyDir:
+                    medium: Memory
+                    sizeLimit: 16Gi
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: cluster-validation-test-runner-job-config
+data:
+  cluster-validation-test-runner-job-config.yaml: |
+    apiVersion: batch/v1
+    kind: Job
+    metadata:
+      name: cluster-validation-test-runner-job
+      labels:
+        amd.com/cluster-validation-created: "true"
+    spec:
+      template:
+        spec:
+          serviceAccountName: cluster-validation-sa
+          nodeSelector:
+            kubernetes.io/hostname: $$NODE
+          volumes:
+          - name: config-volume # Config map volume
+            configMap:
+              name: cluster-validation-config
+          - hostPath: # Specify to use this directory on the host as volume
+              path: /var/log/amd-test-runner
+              type: DirectoryOrCreate
+            name: test-runner-volume
+          containers:
+          - resources:
+              requests:
+                amd.com/gpu: $$GPU_PER_WORKER
+              limits:
+                amd.com/gpu: $$GPU_PER_WORKER
+            name: amd-test-runner
+            image: $$TEST_RUNNER_IMAGE
+            imagePullPolicy: IfNotPresent
+            securityContext: # setup security context for container to get access to device related interfaces
+              privileged: true
+            volumeMounts:
+            - mountPath: /var/log/amd-test-runner # Specify to mount host path volume into specific directory
+              name: test-runner-volume
+            - mountPath: /etc/test-runner/config.json
+              name: config-volume
+              subPath: GPU_VALIDATION_TESTS_JSON
+            env:
+            - name: TEST_TRIGGER
+              value: "MANUAL" # Set the TEST_TRIGGER environment variable to MANUAL for manual test
+            - name: POD_NAME # Use downward API to pass pod name to test runner container
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE # Use downward API to pass pod namespace to test runner container
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: POD_UID # Use downward API to pass pod UID to test runner container
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.uid
+            - name: NODE_NAME # Use downward API to pass host name to test runner container
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+          restartPolicy: Never
+      backoffLimit: 0
+      ttlSecondsAfterFinished: 300 # TTL for the job to be auto cleaned up after finishing
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -275,8 +298,8 @@ metadata:
   name: cluster-validation-cron-job
 spec:
   # schedule: "0 0 * * *"  
-  # schedule every 3 minutes (Change as needed)
-  schedule: "*/3 * * * *"                               # <-update before deploy
+  # schedule every 10 minutes (Change as needed)
+  schedule: "*/10 * * * *"                               # <-update before deploy
   concurrencyPolicy: Forbid                             # Dont overlap runs    
   jobTemplate:
     spec:
@@ -321,12 +344,30 @@ spec:
                   new_job="cluster-validation-mpi-job-${ts}"
                   # Calculate worker replicas based on passed nodes count
                   actual_worker_replicas=$passed_count
+
+                  # Generate PF NAD list (for PF)
+                  PF_NAD_LIST=$(printf "${PF_NIC_NAD_NAME},%.0s" $(seq 1 $PF_NIC_PER_WORKER))
+                  PF_NAD_LIST=${PF_NAD_LIST%,}  # remove trailing comma
+                  # Generate VF NAD list (for VF)
+                  VF_NAD_LIST=$(printf "${VF_NIC_NAD_NAME},%.0s" $(seq 1 $VF_NIC_PER_WORKER))
+                  VF_NAD_LIST=${VF_NAD_LIST%,}  # remove trailing comma
+
+                  if [ "$PF_NIC_PER_WORKER" -gt 0 ]; then
+                    NAD_ANNOTATION="$PF_NAD_LIST"
+                  elif [ "$VF_NIC_PER_WORKER" -gt 0 ]; then
+                    NAD_ANNOTATION="$VF_NAD_LIST"
+                  else
+                    NAD_ANNOTATION=""
+                  fi
+
                   sed "s/^  name: cluster-validation-mpi-job/  name: ${new_job}/; \
                       s|\$\$WORKER_REPLICAS|${actual_worker_replicas}|g; \
                       s|\$\$LAUNCHER_REPLICAS|${LAUNCHER_REPLICAS}|g; \
                       s|\$\$SLOTS_PER_WORKER|${SLOTS_PER_WORKER}|g; \
                       s|\$\$GPU_PER_WORKER|${GPU_PER_WORKER}|g; \
-                      s|\$\$NIC_PER_WORKER|${NIC_PER_WORKER}|g; \
+                      s|\$\$PF_NIC_PER_WORKER|${PF_NIC_PER_WORKER}|g; \
+                      s|\$\$VF_NIC_PER_WORKER|${VF_NIC_PER_WORKER}|g; \
+                      s|\$\$NAD_ANNOTATION|${NAD_ANNOTATION}|g; \
                       s|\$\$RCCL_WORKLOAD_IMAGE|${RCCL_WORKLOAD_IMAGE}|g" \
                       /mpi-configs/cluster-validation-mpijob-config.yaml | kubectl apply -f -   
                   echo "[MPIJob: Submitted for $actual_worker_replicas worker node(s)]"
